Add GET /users/<gid>/groups
